--- a/work-gnamo.html
+++ b/work-gnamo.html
@@ -143,7 +143,7 @@ By Claudia Peña de Silvestri, with the help of Alexandra Frieden, Christopher W
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2018 &copy; Copyright <a href="klaoe.github.io">klaoe</a>. All rights Reserved. Oscar + Dora + Bruno.</p>
+							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>.  All rights Reserved. Oscar + Dora + Bruno.</p>
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
