--- a/work-pomaceus-migration.html
+++ b/work-pomaceus-migration.html
@@ -156,7 +156,7 @@ transporting and planting.
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2018 &copy; Copyright <a href="klaoe.github.io">klaoe</a>. All rights reserved. All animals free! </p>
+							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>.  All rights reserved. All animals free! </p>
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
