--- a/work.html
+++ b/work.html
@@ -373,7 +373,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2018 &copy; Copyright <a href="klaoe.github.io">klaoe</a>. All rights Reserved. GO VEGAN. </p>
+							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>.  All rights Reserved. GO VEGAN. </p>
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
