Let see what I did

--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">Let see what I did</h2>
-							<p class="page-title__text">I have been working with food since 1995, when I got my first job at Burger King located at the Champs Elysees while studying theater in Paris, I realised that I had ..., better than acting as my professor Fanny Vallon told me once. She was right, I never told her, I never talked again to her. I know working at BK...I can't believe it myself, and it sounds crazy but today, I even appreciate what taught me that first job experience: multitasking. Monsieur Richard by the other hand was the first person to tell me to consider a career in gastronomy, he told me that I had the engine, and most of the people working at his restaurants don't</p>
+							<p class="page-title__text">I have been working with food since 1995...</p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
