--- a/about.html
+++ b/about.html
@@ -91,9 +91,9 @@
 									<p class="about__subtitle"> Eating Designer - Experta en el desarrollo de experiencias culinarias, especializada en la cocina crudivegana, vegana internacional. </p>
 									<p class="about__text">Soy chef profesional con mas de 20 años de experiencia en el mundo de la gastronomía Internacional. Vengo de la cocina tradicional pero desde 6 años estoy especializada en cocina crudivegana, vegana y vegetariana que reflejan mi filosofía de vida. Mi estilo es muy amplio debido al haber vivido en muchos lugares diferentes, he desarrollado un carácter culinario pincelado de matices que abarcan desde las cocina Mediterráneas de Italia, España, Francia, Grecia y el norte de África hasta México, Centro y Sudamérica. Toques de fusión Asiáticos y Africanos, con particular atención en el sabor, la estética y presentación. La que propongo es una cocina muy creativa pero a la vez 100% natural, elaborada con productos ecológicos locales.
 
-He trabajado en mas de 10 países alrededor del mundo. Hablo Italiano, Español, Francés, Inglés, Alemán y tengo nociones básicas de Portugués.
+He trabajado en mas de 10 países alrededor del mundo. Hablo Italiano, Español, Francés, Inglés, Alemán y tengo nociones básicas de Portugués y Gallego.
 
-Entre mis clientes figuran privados, empresas e instituciones. Oxfam Deutschland, Zalando, Veganz, Festival del cine Ruso en Berlín, Wunderkinder, son solo algunos de los clientes a los que les he ofrecido mis servicios en los últimos años, sea en calidad de Asesor gastronómico, Manager y Chef del brunch y organización de eventos artístico-culinario como en el caso de Veganz o como servicio de Catering y para Cursos de cocina para los empleados de Zalando.</p>
+Entre mis clientes figuran privados, empresas e instituciones. Oxfam Deutschland, Zalando, Veganz, Festival del cine Ruso en Berlín, Wunderkinder, son solo algunos de los clientes a los que les he ofrecido mis servicios en los últimos años, sea en calidad de Asesor gastronómico, Manager y Chef del brunch y organización de eventos artístico-culinario como en el caso de Veganz o como servicio de Catering y para cursos de cocina del team Zalando Lounge en Berlin.</p>
 									
 									<!-- progress -->
 									<div class="progress">
