--- a/about.html
+++ b/about.html
@@ -93,7 +93,9 @@
 
 He trabajado en mas de 10 países alrededor del mundo. Hablo Italiano, Español, Francés, Inglés, Alemán y tengo nociones básicas de Portugués y Gallego.
 
-Entre mis clientes figuran privados, empresas e instituciones. Oxfam Deutschland, Zalando, Veganz, Festival del cine Ruso en Berlín, Wunderkinder, son solo algunos de los clientes a los que les he ofrecido mis servicios en los últimos años, sea en calidad de Asesor gastronómico, Manager y Chef del brunch y organización de eventos artístico-culinario como en el caso de Veganz o como servicio de Catering y para cursos de cocina del team Zalando Lounge en Berlin.</p>
+Entre mis clientes figuran privados, empresas e instituciones. Oxfam Deutschland, Zalando, Veganz, Festival del cine Ruso en Berlín, Wunderkinder, son solo algunos de los clientes a los que les he ofrecido mis servicios en los últimos años, sea en calidad de Asesor gastronómico, Manager y Chef del brunch y organización de eventos artístico-culinario como en el caso de Veganz o como servicio de Catering y para cursos de cocina del team Zalando Lounge en Berlin.
+
+</p>
 									
 									<!-- progress -->
 									<div class="progress">
