--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">Let see what I did</h2>
-							<p class="page-title__text">I have been working with food since 1995...</p>
+							<p class="page-title__text">With more than 25 years of work in the food industry, I have acquired the ability to work in different environments and to understand the ins-and-outs and the workflows of the food and gastronomy industry. Vegan since 2012 I help people and companies to find solutions to integrate a compassionate and sustainable way of eating...</p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
