--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 								<div class="contact">
 									<div class="contact__icon"><i class="pe-7s-note"></i></div>
 									<h3 class="contact__title">address</h3>
-									<div class="contact__text">Somewhere in the middle of a wood</div>
+									<div class="contact__text">Somewhere in the woods</div>
 								</div><!-- End / contact -->
 								
 								
