--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 								<div class="contact">
 									<div class="contact__icon"><i class="pe-7s-voicemail"></i></div>
 									<h3 class="contact__title">e-mail</h3>
-									<div class="contact__text"><a href="#">write@klaoe.com</a></div>
+									<div class="contact__text"><a href="#">theveganissima@gmail.com</a></div>
 								</div><!-- End / contact -->
 								
 							</div>
