--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">Let see what I did</h2>
-							<p class="page-title__text">With more than 25 years of work in the food industry, I have acquired the ability to work in different environments and to understand the ins-and-outs and the workflows of the food and gastronomy industry. Vegan since 2012 I help people and companies to find solutions to integrate a compassionate and sustainable way of eating...My job is to help people. I help them in many ways. I am a polyglot that has lived and worked in several countries. </p>
+							<p class="page-title__text">With more than 25 years of work in the food industry, I have acquired the ability to work in different environments and to understand the ins-and-outs and the workflows of the food and gastronomy industry. As a gastronomic advisor, vegan since 2012, I help people and companies to find business solutions to integrate a compassionate and sustainable way of eating...My job is to help people. I help them in many ways. I am a polyglot that has lived and worked in several countries. </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
