--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">Get in touch</h2>
-							<p class="page-title__text">If you need help with elaborating a menu, changing your habits, exchange ideas, collaborations, exhibitions, talks, performances related with vegan food.</p>
+							<p class="page-title__text">If you need help with a  catering for your event, elaborating a menu for your restaurant, changing your habits, exchange ideas, collaborations, exhibitions, talks, performances related with vegan food.</p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
