--- a/work-recipes-development.html
+++ b/work-recipes-development.html
@@ -89,7 +89,7 @@
 						<div>
 							<div class="work-detail__entry">
 								<p> Some of the dishes </p><br>
-								<div class="work-img"><img src="/assets/img/tarta-de-quinoa-y-fruta-del-bosque(klaoe2017).jpg" alt=""></div><div class="work-img"><img src="/assets/img/tarta-de-quinoa-y-fruta-del-bosque(klaoe2017).jpg" alt=""></div><div class="work-img"><img src="/assets/img/tarta-de-quinoa-y-fruta-del-bosque(klaoe2017).jpg" alt=""></div>
+								<div class="work-img"><img src="/assets/img/tarta-de-quinoa-y-fruta-del-bosque(klaoe2017).jpg" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
