--- a/work-travels.html
+++ b/work-travels.html
@@ -66,7 +66,7 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title"> Some people are turists, some others we live </h2>
+							<h2 class="page-title__title"> Some people are always tourists, some others we live in the country and get shaped by that experience, eventually becoming part of that place. </h2>
 							<p class="page-title__text"> ... </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
@@ -83,9 +83,9 @@
 						<!--  -->
 						<div>
 							<div class="work-detail__entry">
-								<p>Montar  </p><br>
-								<div class="work-img"><img src="assets/img/works/01.jpg" alt=""></div>
-								<div class="work-img"><img src="assets/img/works/02.jpg" alt=""></div>
+								<p>Berlin</p><br>
+								<div class="work-img"><img src="assets/img/artichokes-and-gorgonzola-salad(klaoe2013).png" alt=""></div>
+								<div class="work-img"><img src="assets/img/tortilla-de-jalapeños-klaoe.jpg" alt=""></div>
 								<div class="work-img"><img src="assets/img/works/03.jpg" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
