--- a/work-animal-activism.html
+++ b/work-animal-activism.html
@@ -71,7 +71,7 @@
                             Because they do not have a voice and it should be aknowledged the terror we impose them. It should be clear that they are sentient beings, they feel as we do, they love as we do, they fight for their lives as we would do. 
                                 <br> We, the humans, the most intelligent animal on Earth, and yet the cruelest too.
                                 <br> Animals are not here to be our slaves, our food or our clothes and shoes. 
-                                <br> All animals should have rights, first of all the right to live. This is why it is important to fight for them, to preserve all species, and help to let them free to live without arm. 
+                                <br> All animals should have rights, first of all the right to live without being abused by Humans. 
                                 
                              
                             </p>
