--- a/work-the-brunch.html
+++ b/work-the-brunch.html
@@ -67,7 +67,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title"> The Brunch </h2>
-							<p class="page-title__text"> I have been a great fan of the Brunch concept since I lived in NYC and had the first one, back in 2000. I used to work for the Forgeois Group at Le Singe Vert, in Chelsea and we used to serve an amazing brunch with a gorgeus twist of France, but 100% prepared by Mexican Chef and his kitchen staff. After that it has been a long way of designing all sort of brunches and now, almost 20 years later my concept of brunch has transformed and become absolutely vegan. 100% plant based pleasure to delight all palates. </p>
+							<p class="page-title__text"> I have been a great fan of the Brunch concept since I lived in NYC and had the first one, back in 2000. I used to work for the Forgeois Group at Le Singe Vert, in Chelsea and we used to serve an amazing brunch with a gorgeus twist of France, but 100% prepared by Mexican Chef and his kitchen staff. After that it has been a long journey of creating all sort of brunches and now, almost 20 years later my concept of brunch has transformed and become absolutely vegan. 100% plant based pleasure to delight all palates. </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
