--- a/work-the-brunch.html
+++ b/work-the-brunch.html
@@ -84,10 +84,10 @@
 						<div>
 							<div class="work-detail__entry">
 								<p>Brunch at Veganz </p><br>
-								<div class="work-img"><img src="/assets/img/Brunch-at-veganz.png" alt=""></div>
-								<div class="work-img"><img src="assets/img/works/02.jpg" alt=""></div>
-								<div class="work-img"><img src="/assets/img/brunch-at-quinoa3(klaoe2017).jpg" alt=""></div>
-                                <div class="work-img"><img src="/assets/img/brunch-at-biocasa(klaoe2017).JPG" alt=""></div>
+								<div class="work-img"><img src="/assets/img/Brunch-at-veganz.png" width=1000 alt=""></div>
+								
+								<div class="work-img"><img src="/assets/img/brunch-at-quinoa3(klaoe2017).jpg" width=1000 alt=""></div>
+                                <div class="work-img"><img src="/assets/img/brunch-at-biocasa(klaoe2017).JPG" width=1000 alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
