--- a/animal-activism.html
+++ b/animal-activism.html
@@ -91,10 +91,10 @@
 						<div>
 							<div class="work-detail__entry">
 								<p>DON'T BE PART OF THE PROBLEM! BE PART OF THE SOLUTION! </p><br>
-								<div class="work-img"><img src="/assets/img/peta-monkey-animal-testing.jpg" alt=""></div>
+								<!--<div class="work-img"><img src="/assets/img/peta-monkey-animal-testing.jpg" alt=""></div>
 								<div class="work-img"><img src="/assets/img/peta-rat-animal-testing.jpg" alt=""></div>
 								<div class="work-img"><img src="/assets/img/peta-bunny-animal-testing.jpg" alt=""></div>
-                                <div class="work-img"><img src="/assets/img/barry-horne.png" alt=""></div>
+                                <div class="work-img"><img src="/assets/img/barry-horne.png" alt=""></div>-->
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
