--- a/food-photography.html
+++ b/food-photography.html
@@ -66,7 +66,7 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title"> Food photography and  </h2>
+							<h2 class="page-title__title"> My food through photography </h2>
 							<p class="page-title__text"> </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
@@ -84,9 +84,9 @@
 						<div>
 							<div class="work-detail__entry">
 							<p> </p><br>
-								<div class="work-img"><img src="assets/img/Falafels-ensalada-klaoe.JPG" alt=""></div>
-								<div class="work-img"><img src="#" alt=""></div>
-								<div class="work-img"><img src="#∫" alt=""></div>
+								<div class="work-img"><img src="assets/img/collage-2-instagram-klaoe.png" alt=""></div>
+								<div class="work-img"><img src="assets/img/mundovegano-2.png" alt=""></div>
+								<div class="work-img"><img src="assets/img/mundovegano-3.png" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
