--- a/work-growing-organic-food.html
+++ b/work-growing-organic-food.html
@@ -86,11 +86,11 @@
 						<!--  -->
 						<div>
 							<div class="work-detail__entry">
-								<p>Home grown tomatoes from summer 2019 </p><br>
+								<p>Home grown tomatoes from summer 2019 a beautiful present from our neighbour Begoña</p><br>
 								<div class="work-img"><img src="/assets/img/organic-tomatoes-(klaoe2019).png" alt=""></div>
                                 <p>Home grown tomatoes from summer 2019 </p><br>
 								<div class="work-img"><img src="/assets/img/physalis(klaoe2019).JPG" alt=""></div>
-                                <p>Home grown physalis, a present from our neighbour </p><br>
+                                <p>Home grown physalis, another present from our neighbour </p><br>
 								<div class="work-img"><img src="/assets/img/organic-tomatoes-(klaoe2019).png" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
