--- a/food-photography.html
+++ b/food-photography.html
@@ -88,7 +88,8 @@
                                 <div class="work-img"><img src="assets/img/mundovegano-3.png" alt=""></div>
 								<div class="work-img"><img src="assets/img/mundovegano-2.png" alt=""></div>
 								<div class="work-img"><img src="assets/img/mundovegano-1.png" alt=""></div>
-                                <div class="work-img"><img src="assets/img/collage-2-instagram-klaoe.png" alt=""></div>
+                                <div class="work-img"><img src="assets/img/setas-silvestres.JPG" alt=""></div>
+                                
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
