--- a/food-photography.html
+++ b/food-photography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Work detail</title>
+		<title>Editorial and food photography</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="format-detection" content="telephone=no">
@@ -66,7 +66,7 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title"> My food through photography </h2>
+							<h2 class="page-title__title"> Some recipes from the magazine MUNDOvegano </h2>
 							<p class="page-title__text"> </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
