--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								
 								<!-- title -->
 								<div class="title">
-									<h2 class="title__title">I LOVE. I CARE. I DO. </h2>
+									<h2 class="title__title">Selected work </h2>
 								</div><!-- End / title -->
 								
 							</div>
