--- a/work-FBNM.html
+++ b/work-FBNM.html
@@ -98,6 +98,8 @@
 						<!--  -->
 						<div>
 							<div class="work-detail__entry">
+                                <p>The Connectors </p><br>
+                                <div class="work-img"><img src="assets/img/FBNM(Klaoe2015).jpg" alt=""></div>
 								<p>Some of the wishes </p><br>
 								<div class="work-img"><img src="/assets/img/gnamo-food-bless-you-03-535x357.jpg" alt=""></div>
 								<div class="work-img"><img src="assets/img/gnamo-food-bless-you-04-535x378.jpg" alt=""></div>
