--- a/work-recipes-development.html
+++ b/work-recipes-development.html
@@ -89,8 +89,8 @@
 						<div>
 							<div class="work-detail__entry">
 								<p> Some of the dishes </p><br>
-								<div class="work-img"><img src="/assets/img/tarta-de-quinoa-y-fruta-del-bosque(klaoe2017).jpg" height="1000"alt=""></div>
-								<div class="work-img"><img src="/assets/img/collage-instagram-klaoe.png" alt=""></div>
+								<div class="work-img"><img src="/assets/img/tarta-de-quinoa-y-fruta-del-bosque(klaoe2017).jpg" height="1000 "alt=""></div>
+								<div class="work-img"><img src="/assets/img/Falafels-ensalada-klaoe.JPG" alt=""></div>
                                 
 							</div>
 							<div class="sharebox__module awe-text-center">
