--- a/work-the-brunch.html
+++ b/work-the-brunch.html
@@ -87,6 +87,7 @@
 								<div class="work-img"><img src="/assets/img/Brunch-at-veganz.png" width=1000 alt="klaoe-brunch-at-veganz"></div>
 								<div class="work-img"><img src="/assets/img/brunch-at-quinoa3(klaoe2017).jpg" width=1000 alt="klaoe-brunch-at-quinoa3"></div>
                                 <div class="work-img"><img src="/assets/img/brunch-at-biocasa(klaoe2017).JPG" width=1000 alt="klaoe-brunch-at-biocasa"></div>
+                                <div class="work-img"><img src="/assets/img/quinoa-the-brunch-where-is-jesus(klaoe2013).jpg" width=1000 alt="klaoe-brunch-at-where-is-jesus"></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
