--- a/gnamo-lab.html
+++ b/gnamo-lab.html
@@ -66,16 +66,8 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title"> Installation | Performance | Design </h2>
-							<p class="page-title__text">Collection of wishes left from visitors during the installation. Participants were invited to pay their tribute to food and make a wish for and to Ñuke Mapu, leaving their written wishes by our Altar.
-
-Ñuke Mapu* is our temple, a celebration of life, an altar that is waiting for wishes, a way back to connect with the roots we might have lost in our society, understanding through the senses the extreme importance of food as a material, as a connector that allows us to join and be part of this experiment called life.
-
-Food Bless You, Ñuke Mapu!
-
-*Ñuke Mapu means Mother Earth in Mapudungún, the language of the Mapuche people from Araucanía, Chile.
-
-By Claudia Peña de Silvestri, with the help of Alexandra Frieden, Christopher Westby, Stefania Artusi. </p>
+							<h2 class="page-title__title"> Food Art and Catering laboratory in Berlin </h2>
+							<p class="page-title__text">...</p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
@@ -92,9 +84,9 @@ By Claudia Peña de Silvestri, with the help of Alexandra Frieden, Christopher W
 						<div>
 							<div class="work-detail__entry">
 								<p>Montar  </p><br>
-								<div class="work-img"><img src="assets/img/works/01.jpg" alt=""></div>
-								<div class="work-img"><img src="assets/img/works/02.jpg" alt=""></div>
-								<div class="work-img"><img src="assets/img/works/03.jpg" alt=""></div>
+								<div class="work-img"><img src="assets/img/coworking-food-lab-gnamo.jpg" alt=""></div>
+								<div class="work-img"><img src="assets/img/gnamo-at-factory-berlin.jpg" alt=""></div>
+								<div class="work-img"><img src="assets/img/" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
