--- a/work-fluxbau.html
+++ b/work-fluxbau.html
@@ -127,7 +127,7 @@ By Claudia Peña de Silvestri, with the help of Alexandra Frieden, Christopher W
 						</div><!-- End /  -->
 						
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary " href="#">All work
+							<a class="md-btn md-btn--outline-primary " href="work.html">All work
 							</a>
 						</div>
 					</div>
