the brunch photos

--- a/the-vegan-pop-up.html
+++ b/the-vegan-pop-up.html
@@ -66,30 +66,12 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title">Pomaceus Migration</h2>
-							<p class="page-title__text">Human beings today more than ever contribute to shape our planet; The aim of this installation is to shape it gratefully.
+							<h2 class="page-title__title"> The vegan pop up </h2>
+							<p class="page-title__text">
+                                <p> Concept design and development of a Restaurant </p>
 
-<p>Globalization is the reaction of systematic and erroneous facts that alter the harmony of Nature.
-Instead of giving back what we receive we just take and take, waiting for more to come.</p>
-
-<p>Pomaceus Migration symbolize this return to the soil of something so basic and so allegoric such as seeds representing the beginning of new life form, in this case an iconographic fruit, the apple.</p>
-
-                            Each apple is labeled with a different note. 
-Everyone can choose his own apple.
-
-People are invited to consume the fruit and deposit the seed into a little lab container provided. 
-They will write their names or alias and email on the label, this will be the name for the plant that hopefully will grow.
-
-These seeds were transported back to Berlin and following the process of germination in our Gallery, 
-I will plant the little tree in a special place where periodically I will check personally for his grown 
-and inform through our web, following the evolution of new born trees.
-
-The human effect in this installation will be intentionally focused to migration of a seed coming from an apple born in Spain,
-bought in Germany and eaten in Czech Republic, to a new ground where to begin the cycle again becoming an apple tree.
-
-Those apple trees will be named as the eaters and will grow strength by the energy provide during the process of eating, 
-transporting and planting.
-							<div class="page-title__divider"></div>
+<p> Ethical, Healthy, Organic Restaurant </p>
+				<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
 					</div>
@@ -104,10 +86,10 @@ transporting and planting.
 						<!--  -->
 						<div>
 							<div class="work-detail__entry">
-								<p>Montar  </p><br>
-								<div class="work-img"><img src="assets/img/works/01.jpg" alt=""></div>
-								<div class="work-img"><img src="assets/img/works/02.jpg" alt=""></div>
-								<div class="work-img"><img src="assets/img/works/03.jpg" alt=""></div>
+								<p>Website</p><br>
+								<div class="work-img"><img src="assets/img/theveganpopup1.png" alt=""></div>
+                                <div class="work-img"><img src="assets/img/theveganpopup2.png" alt=""></div>
+                                <div class="work-img"><img src="assets/img/theveganpopup3.png" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
@@ -155,7 +137,7 @@ transporting and planting.
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>.  All rights reserved. All animals free! </p>
+							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.github.io">klaoe</a>. All rights Reserved. GO VEGAN.</p>
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
