--- a/work-travels.html
+++ b/work-travels.html
@@ -110,12 +110,10 @@
 								<!-- social-icon -->
 								<a class="social-icon" href="https://www.instagram.com/"><i class="social-icon__icon fa fa-instagram"></i>
 								</a><!-- End / social-icon -->
-								
-							</div>
 						</div><!-- End /  -->
 						
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary " href="#">All work
+							<a class="md-btn md-btn--outline-primary " href="work.html">All work
 							</a>
 						</div>
 					</div>
