--- a/cooking-classes.html
+++ b/cooking-classes.html
@@ -85,7 +85,7 @@
 						<div>
 							<div class="work-detail__entry">
 								<p>UNDER CONSTRUCTION</p><br>
-								<div class="work-img"><img src="" alt=""></div>
+								<div class="work-img"><img src="assets/img/Zucchini-spaghetti-dry-tomatoes.jpg" alt=""></div>
 								<div class="work-img"><img src="" alt=""></div>
 								<div class="work-img"><img src="" alt=""></div>
 							</div>
