--- a/work-growing-organic-food.html
+++ b/work-growing-organic-food.html
@@ -91,6 +91,10 @@
                                 
 								<div class="work-img"><img src="/assets/img/physalis(klaoe2019).JPG" width="1000" alt=""></div>
                                 <p>Home grown physalis, another present from our neighbour </p><br>
+                                <div class="work-img"><img src="/assets/img/cauliflowers.png" alt=""></div>
+                                <p>3 cauliflowers were pushing into life </p><br>
+                                <div class="work-img"><img src="/assets/img/organic-zucchini.png" alt=""></div>
+                                <p>This was the first zucchini I have collected for this soil </p><br>
 
 							</div>
 							<div class="sharebox__module awe-text-center">
