--- a/cooking-classes.html
+++ b/cooking-classes.html
@@ -86,7 +86,7 @@
 							<div class="work-detail__entry">
 								<p>UNDER CONSTRUCTION</p><br>
 								<div class="work-img"><img src="assets/img/Zucchini-spaghetti-dry-tomatoes.jpg" alt=""></div>
-								<div class="work-img"><img src="" alt=""></div>
+								<div class="work-img"><img src="assets/img/Burrata-vegana-in-foglie-di-kale-klaoe.jpg" alt=""></div>
 								<div class="work-img"><img src="" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
