--- a/the-vegan-pop-up.html
+++ b/the-vegan-pop-up.html
@@ -87,9 +87,11 @@
 						<div>
 							<div class="work-detail__entry">
 								<p>Website</p><br>
-								<div class="work-img"><img src="assets/img/theveganpopup1.png" alt=""></div>
-                                <div class="work-img"><img src="assets/img/theveganpopup2.png" alt=""></div>
-                                <div class="work-img"><img src="assets/img/theveganpopup3.png" alt=""></div>
+                                <div class="work-img"><img src="assets/img/the-vegan-al-puerto.jpg" width="1000" alt=""></div>
+								<div class="work-img"><img src="assets/img/theveganpopup1.png" width="1000" alt=""></div>
+                                <div class="work-img"><img src="assets/img/theveganpopup2.png" width="1000" alt=""></div>
+                                <div class="work-img"><img src="assets/img/theveganpopup3.png" width="1000" alt=""></div>
+                                <div class="work-img"><img src="assets/img/megataco-klaoe.jpg" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
