--- a/verygreen.html
+++ b/verygreen.html
@@ -87,7 +87,7 @@
 						<div>
 							<div class="work-detail__entry">
 								<p>Website</p><br>
-								<div class="work-img"><img src="assets/img/touch-the-smell-of-taste-and-hear-your-sight-1-535x357.jpg" alt=""></div>
+								<div class="work-img"><img src="assets/img/verygreen.(klaoe2019).png" width= "1000" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
@@ -120,7 +120,7 @@
 						</div><!-- End /  -->
 						
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary " href="#">All work
+							<a class="md-btn md-btn--outline-primary " href="work.html">All work
 							</a>
 						</div>
 					</div>
