--- a/cooking-classes.html
+++ b/cooking-classes.html
@@ -87,7 +87,7 @@
 								<p>UNDER CONSTRUCTION</p><br>
 								<div class="work-img"><img src="assets/img/Zucchini-spaghetti-dry-tomatoes.jpg" alt=""></div>
 								<div class="work-img"><img src="assets/img/Burrata-vegana-in-foglie-di-kale-klaoe.jpg" alt=""></div>
-								<div class="work-img"><img src="" alt=""></div>
+								<div class="work-img"><img src="assets/img/" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
@@ -106,6 +106,9 @@
 								<a class="social-icon" href="http://www.linkedin.com"><i class="social-icon__icon fa fa-linkedin"></i>
 								</a><!-- End / social-icon -->
 								
+                                <!-- social-icon -->
+								<a class="social-icon" href="http://www.instagram.com"><i class="social-icon__icon fa fa-instagram"></i>
+								</a><!-- End / social-icon -->
 								
 								<!-- social-icon -->
 								<a class="social-icon" href="http://www.pinterest.com"><i class="social-icon__icon fa fa-pinterest"></i>
