--- a/work.html
+++ b/work.html
@@ -378,7 +378,7 @@
 							</div>
 						</div>
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary " href="work-pomaceus-migration.html">more work
+							<a class="md-btn md-btn--outline-primary " href="contact.html">contact for more info
 							</a>
 						</div>
 					</div>
