--- a/cooking-classes.html
+++ b/cooking-classes.html
@@ -86,8 +86,16 @@
 							<div class="work-detail__entry">
 								<p>UNDER CONSTRUCTION</p><br>
 								<div class="work-img"><img src="assets/img/Zucchini-spaghetti-dry-tomatoes.jpg" alt=""></div>
-								<div class="work-img"><img src="assets/img/Burrata-vegana-in-foglie-di-kale-klaoe.jpg" alt=""></div>
-								<div class="work-img"><img src="assets/img/" alt=""></div>
+								<div class="work-img"><img src="assets/img/Falafels-ensalada-klaoe.JPG" width="1000" alt=""></div>
+								<div class="work-img"><img src="assets/img/vegan-snacks.jpg" width="1000"alt=""></div>
+                                
+                                <div class="work-img"><img src="assets/img/hummus-remolacha-babaganoush-klaoe.JPG" width="1000" alt=""></div>
+                                <div class="work-img"><img src="assets/img/quinoa-the-bistro-2.jpg" width="1000"alt=""></div>
+                                <div class="work-img"><img src="assets/img/ensalada-verde-con-tofu-en-salsa-teriyaki-casera.jpg" width="1000"alt=""></div>
+                                <div class="work-img"><img src="assets/img/tortilla-de-jalapeños-klaoe.jpg" width=1000 alt=""></div>
+                                <div class="work-img"><img src="assets/img/empanadas-veganas.jpg" width="1000"alt=""></div>
+                                <div class="work-img"><img src="assets/img/vegan-sobrasada-klaoe.jpg" width="1000"alt=""></div>
+                                
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
