--- a/quinoa-the-brunch.html
+++ b/quinoa-the-brunch.html
@@ -92,7 +92,8 @@
                                 <div class="work-img"><img src="/assets/img/mexican-brunch.jpg" width=1000 alt="klaoe-brunch-at-veganz">
                                 </div>
                                 <div class="work-img"><img src="assets/img/quinoa-the-brunch-at-where-is-jesus-berlin.jpg"width="1000" alt=""></div>
-                                <div class="work-img"><img src="/assets/img/brunch-in-malaga-biocasa.jpg" width=1000 alt="klaoe-brunch-at-biocasa">
+                                <div class="work-img"><img src="/assets/img/brunch-in-malaga-biocasa.jpg" width=1000 alt="klaoe-vegan-brunch-at-biocasa">
+                                <div class="work-img"><img src="/assets/img/brunch-vegano-at-rawattitude.jpg" width=1000 alt="klaoe-brunch-vegan">
                                 </div>
                                 </div>
                                 </div>
@@ -114,6 +115,9 @@
 								<a class="social-icon" href="http://www.linkedin.com"><i class="social-icon__icon fa fa-linkedin"></i>
 								</a><!-- End / social-icon -->
 								
+                                <!-- social-icon -->
+								<a class="social-icon" href="http://www.instagram.com"><i class="social-icon__icon fa fa-instagram"></i>
+								</a><!-- End / social-icon -->
 								
 								<!-- social-icon -->
 								<a class="social-icon" href="http://www.pinterest.com"><i class="social-icon__icon fa fa-pinterest"></i>
