--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
 								<div class="contact">
 									<div class="contact__icon"><i class="pe-7s-voicemail"></i></div>
 									<h3 class="contact__title">e-mail</h3>
-									<div class="contact__text"><a href="#">theveganissima@gmail.com</a></div>
+									<div class="contact__text"><a href="#">hello@klaoe.com</a></div>
 								</div><!-- End / contact -->
 								
 							</div>
