--- a/work-sustainability.html
+++ b/work-sustainability.html
@@ -71,17 +71,20 @@
 
 <p>Every single thing we do every single day afects the planet and most of the time we are not aware of it. I gradually became more conscious about my choices, knowing that they will have an impact on the planet, I try to contribute by:</p>
 <ol>
-    <li>Growing my own organic vegetables</li>
+    <li>Growing your own organic vegetables</li>
     <li>Ditching plastic of all sort and refusing non compostable disposables </li>
     <li>Being vegan and supporting the vegan industry </li>
     <li>Not having a car and using public transport </li>
-    <li>Making compost out of food waste so our food is 100% consumed </li>
+    <li>Making compost out of food waste so the food is 100% consumed </li>
     <li>Recycling everything possible from computers to clothes </li>
-    <li>Cooking with fire - I am lucky I have a wood cook stove </li>
+    <li>Consuming local and seasonal </li>
     <li>Switching planes for trains when travellling </li>
     <li>Boycotting unethical companies and buying in small local stores </li>
     <li>Foraging and collecting non compostable litter left in the woods </li>
-	</ol>						<div class="page-title__divider"></div>
+	</ol>	
+<p>We need to fall back in love with our planet, we need to seat and observe it, and learn how to respect it.</p>
+                            
+                            <div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
 					</div>
