--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 				<section class="awe-section bg-gray">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-6 col-lg-5 "><img src="/assets/img/klaoeatveganz.jpeg" alt="">
+							<div class="col-md-6 col-lg-5 "><img src="/assets/img/klaoe.jpg" width:"200" alt="">
 							</div>
 							<div class="col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-0 col-lg-offset-1 ">
 								
