--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">About me</h2>
-							<p class="page-title__text"> I love food, a bit to much Vielleicht! </p>
+							<p class="page-title__text"> How not to love food? </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
