--- a/people.html
+++ b/people.html
@@ -121,7 +121,7 @@
 														
 														<!-- hb_back -->
 														<div class="hb_back">
-															<h2 class="work__title">Joaquin Phoenix </h2><span class="work__text">Healthy, Ethical and Organic restaurant concept </span>
+															<h2 class="work__title">Joaquin Phoenix </h2><span class="work__text">yes him the one and only. We have seen him even in the soup in the last few weeks. After winning the Oscar suddenly everyone was talking about how committed to the animal cause he is, but don't think that this something new. Joaquin, together with the members of his family has been vegan for almost his entire life. </span>
 														</div><!-- End / hb_back -->
 														
 													</div><!-- End / hoverbox ef-slide-top -->
