--- a/people.html
+++ b/people.html
@@ -368,7 +368,7 @@
 														
 														<!-- hb_back -->
 														<div class="hb_back">
-															<h2 class="work__title">Dan</h2><span class="work__text">The first Quinoa was located in Panke Culture in Berlin.</span>
+															<h2 class="work__title">Quinoa.The Bistro</h2><span class="work__text">The first Quinoa was located in Panke Culture in Berlin.</span>
 														</div><!-- End / hb_back -->
 														
 													</div><!-- End / hoverbox ef-slide-top -->
