--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
         If you need help with
                                 <li>Catering for your event</li>
                                 <li>Creating a plant based menu for your restaurant</li>
-                               <li>Changing your habits</li>
+                               <li>Changing your habits by learning how to cook</li>
                                 <li>Exchange ideas or collaborations</li> 
-                                <li>exhibitions, talks, performances related with veganism</li></p>
+                                <li>Exhibitions, talks, performances related with veganism</li></p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
