--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 							<div>
 						</div>
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary" href="work.html">WORK
+							<a class="md-btn md-btn--outline-primary" href="work.html">MORE
 							</a>
 						</div>
 					
