--- a/blog-mundovegano.html
+++ b/blog-mundovegano.html
@@ -41,7 +41,7 @@
 </li>
 <li><a href="work.html">Work</a>
 </li>
-<li class="current-menu-item"><a href="blog.html">Blog</a>
+<li class="current-menu-item"><a href="blog-mundovegano.html">Blog</a>
 </li>
 <li><a href="contact.html">Contact</a>
 </li>
