--- a/blog-mundovegano.html
+++ b/blog-mundovegano.html
@@ -208,13 +208,10 @@
 <div class="post__media"><a href="blog-detail.html"><img src="https://images.pexels.com/photos/789140/pexels-photo-789140.jpeg?h=350&amp;auto=compress&amp;cs=tinysrgb" alt=""/></a></div>
 <div class="post__body">
 <div class="post__meta"><span class="date">Dec 31, 2019</span><span class="author"><a href="#">by klaoe</a></span></div>
-<h2 class="post__title"><a href="blog-detail.html">Let's make it bigger this year!</p>
-<a class="md-btn md-btn--outline-primary" href="#">read more
-</a>
-</div>
-</div><!-- End / post -->
-</div>
-</div>
+<h2 class="post__title"><a href="blog-detail.html">Let's make it bigger this year!<p>
+<a class="md-btn md-btn--outline-primary" href="#">read more </a></div>
+<!-- End / post -->
+
 </div>
 </div>
 </div>
@@ -232,7 +229,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-6 col-lg-6 ">
-<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>. All rights Reserved. Esating animals is so oldschool!</p>
+<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>. All rights Reserved. Eating animals is so oldschool!</p>
 </div>
 <div class="col-md-6 col-lg-6 ">
 <div class="footer__social">
