--- a/verygreen.html
+++ b/verygreen.html
@@ -71,6 +71,16 @@
                                 <p> Concept design and development of a Restaurant </p>
 
 <p> Ethical, Healthy, Organic Restaurant </p>
+<li>Concept design for brand development</li>
+<li>Research and analysis of plant based market in specific areas</li>
+<li>Recipe design of vegan healthy recipes including dietary restriction</li>
+<li>Costings and nutritional information on designed recipes</li>
+<li>Identify suppliers and help in the negotiation of cost</li>
+<li>Product design and selection of kitchen equipment</li>
+<li>Branding, logo and uniform design</li>
+<li>Selection of sustainable materials for the construction</li>
+<li>Decoration and selection of furniture</li>
+<li>Kitchen team training</li>
 				<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
