--- a/work.html
+++ b/work.html
@@ -67,9 +67,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">Let see what I do</h2>
-							<p class="page-title__text">With more than 25 years of work in the food industry, I have acquired the ability to work in different environments and to understand the ins-and-outs and the workflows of the food and gastronomy industry. 
-                        
-As a gastronomic advisor, vegan since 2012, I help people and companies to find business solutions to integrate a compassionate and sustainable way of eating...My job is to help I help them in many ways. I am a polyglot that has lived and worked in several countries.                         
+							<p class="page-title__text">...                        
                             <li>Concept design for brand development</li>
 <li>Research and analysis of plant based market in specific areas</li>
 <li>Recipe design of vegan healthy recipes including dietary restriction</li>
@@ -395,7 +393,7 @@ As a gastronomic advisor, vegan since 2012, I help people and companies to find 
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>.  All rights Reserved. GO VEGAN. </p>
+							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>.  All animals deserve to live, eat plants. GO VEGAN. </p>
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
