--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 														
 														<!-- hb_back -->
 														<div class="hb_back">
-															<h2 class="work__title">Food Photography</h2><span class="work__text">View detail</span>
+															<h2 class="work__title">...</h2><span class="work__text">View detail</span>
 														</div><!-- End / hb_back -->
 														
 													</div><!-- End / hoverbox ef-move-bottom -->
@@ -363,7 +363,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>. All rights Reserved. Go Vegan. <br> Don't forget that you have the power to change everything! </p>
+							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.com">klaoe</a>. All rights reserved to me. <br> Don't forget that you have the power to change everything! </p>
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
