--- a/quinoa-the-brunch.html
+++ b/quinoa-the-brunch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Work detail</title>
+		<title>the vegan brunch</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="format-detection" content="telephone=no">
@@ -66,8 +66,8 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title"> The Brunch </h2>
-							<p class="page-title__text"> I have been a great fan of the Brunch concept since I lived in NYC and had the first one, back in 2000. I used to work for the Forgeois Group at Le Singe Vert, in Chelsea and we used to serve an amazing brunch with a gorgeus twist of France, but 100% prepared by Mexican Chef and his kitchen staff. After that it has been a long journey of creating all sort of brunches and now, almost 20 years later my concept of brunch has transformed and become absolutely vegan. 100% plant based pleasure to delight all palates. </p>
+							<h2 class="page-title__title"> The Vegan Brunch </h2>
+							<p class="page-title__text"> I have been a great fan of the Brunch concept since I lived in NYC and had the first one in the year 2000. Back then I used to work for the Forgeois Group at Le Singe Vert, in Chelsea and we used to serve an amazing brunch with a gorgeus twist of France, prepared by Mexican Chef Andres and his kitchen staff. Undoubtably it was really good, it wasn't vegan though. I wasn't either. Time has passed since the NYC days I have lived and travel through different countries and in between I have transited from being 100% carnivorous to 100% vegan from one day to the other. It happened in 2012 and it has been a long journey of discovering a whole new universe of food. After 8 years of having changed my eating habits I am able to create a wide selection of vegan brunches, 100% plant based pleasure to delight all palates. </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
@@ -143,7 +143,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-lg-6 ">
-							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.github.io">klaoe</a>. All rights Reserved. Go Vegan. Adopt don't shop. Boycot plastic. </p>
+							<p class="footer__coppy">2020 &copy; Copyright <a href="klaoe.github.io">klaoe</a>. All rights Reserved. Adopt don't shop. Boycot plastic. </p>
 						</div>
 						<div class="col-md-6 col-lg-6 ">
 							<div class="footer__social">
