--- a/quinoa-the-brunch.html
+++ b/quinoa-the-brunch.html
@@ -67,7 +67,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title"> The Vegan Brunch </h2>
-							<p class="page-title__text"> I have been a great fan of the Brunch concept since I lived in NYC and had the first one in the year 2000. Back then I used to work for the Forgeois Group at Le Singe Vert, in Chelsea and we used to serve an amazing brunch with a gorgeus twist of France, prepared by Mexican Chef Andres and his kitchen staff. Undoubtably it was really good, it wasn't vegan though. I wasn't either. Time has passed since the NYC days I have lived and travel through different countries and in between I have transited from being 100% carnivorous to 100% vegan from one day to the other. It happened in 2012 and it has been a long journey of discovering a whole new universe of food. After 8 years of having changed my eating habits I am able to create a wide selection of vegan brunches, 100% plant based pleasure to delight all palates. </p>
+							<p class="page-title__text"> I have been a great fan of the Brunch concept since I lived in NYC and had the first one, it was the year 2000. Back then I used to work for a restaurant called Le Singe Vert, in Chelsea where we used to serve amazing brunches with a gorgeus twist of France, prepared by a really nice and friendly Mexican Chef called Andres and his kitchen staff. Everything was undoubtably it was really good, it wasn't vegan though. I wasn't either. Time has passed since the NYC days I have lived and travel through different countries and in between I have transited from being 100% carnivorous to 100% vegan from one day to the other. It happened in 2012 and it has been a long journey of discovering a whole new universe of food. After 8 years of having changed my eating habits I am able to create a wide selection of vegan brunches, 100% plant based pleasure to delight all palates. </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
@@ -83,7 +83,7 @@
 						<!--  -->
 						<div>
 							<div class="work-detail__entry">
-								<p>Some brunches </p><br>
+								<p>Sometimes you wish for something specific. Brunch is for when you want it all.</p><br>
 								<div class="work-img"><img src="/assets/img/Brunch-at-veganz.png" width=1000 alt="klaoe-brunch-at-veganz"></div>
 								<div class="work-img"><img src="/assets/img/brunch-at-quinoa3(klaoe2017).jpg" width=1000 alt="klaoe-brunch-at-quinoa3"></div>
                                 <div class="work-img"><img src="/assets/img/brunch-at-biocasa(klaoe2017).JPG" width=1000 alt="klaoe-brunch-at-biocasa"></div>
@@ -132,6 +132,7 @@
 							</a>
 						</div>
 					</div>
+                    </div>
 				</section>
 				<!-- End / Section -->
 				
