--- a/quinoa-the-brunch.html
+++ b/quinoa-the-brunch.html
@@ -67,6 +67,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title"> The Vegan Brunch </h2>
+                            <div></div>
 							<p class="page-title__text"> I have been a great fan of the Brunch concept since I lived in NYC and had the first one, it was the year 2000. Back then I used to work for a restaurant called Le Singe Vert, in Chelsea where we used to serve amazing brunches with a gorgeous twist of France, prepared by a really nice and precise Mexican Chef called Andres and his kitchen staff. Everything was undoubtably really good, it wasn't vegan though. I wasn't either. Time has passed since the NYC days I have lived and travel through different countries and in between I have transited from being 100% carnivorous to 100% vegan from one day to the other. It happened in 2012 and it has been a long journey of discovering a whole new universe of food. After 8 years of having changed my eating habits I am able to create a wide selection of vegan brunches, 100% plant based pleasure to delight all palates. </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
@@ -128,7 +129,7 @@
 						</div><!-- End /  -->
 						
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary " href="#">All work
+							<a class="md-btn md-btn--outline-primary " href="work.html">All work
 							</a>
 						</div>
 					</div>
