--- a/work-growing-organic-food.html
+++ b/work-growing-organic-food.html
@@ -86,15 +86,15 @@
 						<!--  -->
 						<div>
 							<div class="work-detail__entry">
-								<p>Home grown tomatoes from summer 2019 a beautiful present from our neighbour Begoña</p><br>
+								<p>Home grown tomatoes from summer 2019 a beautiful present from our neighbour Begoña.</p><br>
 								<div class="work-img"><img src="/assets/img/organic-tomatoes-(klaoe2019).png" alt=""></div>
                                 
 								<div class="work-img"><img src="/assets/img/physalis(klaoe2019).JPG" width="1000" alt=""></div>
-                                <p>Home grown physalis, another present from our neighbour </p><br>
+                                <p>Home grown physalis, another present from our lovely neighbour. </p><br>
                                 <div class="work-img"><img src="/assets/img/cauliflowers.png" alt=""></div>
-                                <p>3 cauliflowers were pushing into life </p><br>
+                                <p>3 cauliflowers were pushing back into life. </p><br>
                                 <div class="work-img"><img src="/assets/img/organic-zucchini.png" alt=""></div>
-                                <p>This was the first zucchini I have collected for this soil </p><br>
+                                <p>This was the first zucchini I have collected from this soil. </p><br>
 
 							</div>
 							<div class="sharebox__module awe-text-center">
