--- a/quinoa.thebistro.html
+++ b/quinoa.thebistro.html
@@ -67,7 +67,7 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title"> Quinoa, a bistro that grows its own food</h2>
-							<p class="page-title__text">I was invited to develop the concept for a bistro inside the Panke Culture, a space in Berlin. </p>
+							<p class="page-title__text">Development for the concept of a vegan bistro inside the Panke Culture, a space in Wedding, Berlin. </p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
