--- a/animal-activism.html
+++ b/animal-activism.html
@@ -108,7 +108,7 @@
 </div>
 </div>
 							<div class="work-detail__entry">
-								<p>DON'T BE PART OF THE PROBLEM! BE PART OF THE SOLUTION! </p><br>
+								<p>DON'T BE PART OF THE PROBLEM, BE PART OF THE SOLUTION! </p><br>
 								<!--<div class="work-img"><img src="/assets/img/peta-monkey-animal-testing.jpg" alt=""></div>
 								<div class="work-img"><img src="/assets/img/peta-rat-animal-testing.jpg" alt=""></div>
 								<div class="work-img"><img src="/assets/img/peta-bunny-animal-testing.jpg" alt=""></div>
