--- a/animal-activism.html
+++ b/animal-activism.html
@@ -140,7 +140,7 @@
 						</div><!-- End /  -->
 						
 						<div class="awe-text-center mt-50">
-							<a class="md-btn md-btn--outline-primary " href="#">All work
+							<a class="md-btn md-btn--outline-primary " href="work.html">All work
 							</a>
 						</div>
 					</div>
