--- a/contact.html
+++ b/contact.html
@@ -70,11 +70,13 @@
 							<p class="page-title__text">
                                 
         If you need help with
-                                <li>Catering for your event</li>
-                                <li>Creating a plant based menu for your restaurant</li>
-                               <li>Changing your habits by learning how to cook</li>
-                                <li>Exchange ideas or collaborations</li> 
-                                <li>Exhibitions, talks, performances related with veganism</li></p>
+                                <li>Food art catering and catering for your private events</li>
+                                <li>Personal chef specialised in vegan cuisine</li>
+                                <li>Creating a plant based menu for your restaurant, food truck or bar</li>
+                               <li>Changing your habits by learning how to cook vegan dishes</li>
+                                <li>...</li>
+                                <li>A new concept for your new vegan business </li>
+                                <li>Exchange ideas or collaborations, exhibitions, talks, performances related with veganism</li></p>
 							<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
