--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 								<!-- contact -->
 								<div class="contact">
 									<div class="contact__icon"><i class="pe-7s-voicemail"></i></div>
-									<h3 class="contact__title">e-mail</h3>
+									<h3 class="contact__title">booking</h3>
 									<div class="contact__text"><a href="mailto: theveganissima@gmail.com?subject=hola%20klaoe">theveganissima@gmail.com</a></div>
 								</div><!-- End / contact -->
 								
