--- a/work.html
+++ b/work.html
@@ -67,7 +67,8 @@
 						<!-- page-title -->
 						<div class="page-title pb-40">
 							<h2 class="page-title__title">Let see what I do</h2>
-							<p class="page-title__text">...                        
+							<p class="page-title__text">... 
+                                <li>Personal online vegan cooking classes</li>
                             <li>Concept design for brand development</li>
 <li>Research and analysis of plant based market in specific areas</li>
 <li>Recipe design of vegan healthy recipes including dietary restriction</li>
@@ -76,8 +77,8 @@
 <li>Product design and selection of kitchen equipment</li>
 <li>Branding, logo and uniform design</li>
 <li>Selection of sustainable materials for the construction</li>
-<li>Decoration and selection of furniture</li>
-<li>Kitchen team training</li>
+<li>Decoration and selection of sustainable furniture</li>
+<li>Kitchen team training and coaching restaurant management</li>
 </p>
                             <div class="page-title pb-40">
                                 <h2 class="page-title__title">Hospitality Management for Events</h2>
