--- a/about.html
+++ b/about.html
@@ -88,7 +88,8 @@
 								<div class="mt-30">
 									<h2 class="about__title">klaoe</h2>
 									<p class="about__subtitle"> Gastronomic advisor | Vegan chef development of concepts, recipes and culinary experiences. </p>
-									<p class="about__text"> 
+									<p class="about__text">
+                                    
                                     <p>After living and working in different cities such as México city, Rome, N.Y.C., Berlin, Paris, or Málaga among other places, in 2018 I decided to move to a hamlet in the North of Spain, where I started a little organic farm to grow my own food.</p>
                                     <p>I am specialized in vegan international cusine, with more than 25 years of work in the food industry, I have acquired the ability to work in different environments and to understand the ins-and-outs and the workflows of the food and gastronomy industry.</p>
                                     <p>My job consists in teaching people or companies, to find solutions on how to integrate a compassionate and sustainable way of eating in their daily life, sharing with them the secrets of plant based cuisine and making it easy to everyone to make the transition.</p>
@@ -116,7 +117,7 @@
 									
 									<!-- progress -->
 									<div class="progress">
-										<h5 class="progress__title">passioned</h5>
+										<h5 class="progress__title">passion</h5>
 										<div class="progress__wrap">
 											<div class="progress__bar" data-progress-percent="100" data-timing="ease" data-duration="1000" data-delay="500"></div><span class="progress__number">100%</span>
 										</div>
