--- a/recipes.html
+++ b/recipes.html
@@ -66,8 +66,8 @@
 						
 						<!-- page-title -->
 						<div class="page-title pb-40">
-							<h2 class="page-title__title">Let see what I do</h2>
-							<p class="page-title__text">Algunas de las recetas que podemos hacer juntas</p>
+							<h2 class="page-title__title">Platos veganos</h2>
+							<p class="page-title__text">Algunas de las recetas que podemos hacer juntas.</p>
                             <div class="page-title pb-40">
                                 <h2 class="page-title__title">...</h2>
                                  
