--- a/food-photography.html
+++ b/food-photography.html
@@ -85,9 +85,9 @@
 							<div class="work-detail__entry">
 							<p> </p><br>
 								
-                                <div class="work-img"><img src="assets/img/mundovegano-3.png" alt=""></div>
-								<div class="work-img"><img src="assets/img/mundovegano-2.png" alt=""></div>
-								<div class="work-img"><img src="assets/img/mundovegano-1.png" alt=""></div>
+                                <div class="work-img"><img src="assets/img/mundovegano%202019-11-05%20a%20las%2019.15.15.jpeg" alt=""></div>
+								<div class="work-img"><img src="assets/img/mundovegano%202019-11-05%20a%20las%2019.15.43.jpeg" alt=""></div>
+								<div class="work-img"><img src="assets/img/mundovegano%202019-11-05%20a%20las%2019.16.05.jpeg" alt=""></div>
                                 <div class="work-img"><img src="assets/img/setas-silvestres.JPG" alt=""></div>
                                 
 							</div>
