--- a/the-vegan-pop-up.html
+++ b/the-vegan-pop-up.html
@@ -68,9 +68,10 @@
 						<div class="page-title pb-40">
 							<h2 class="page-title__title"> The vegan pop up </h2>
 							<p class="page-title__text">
-                                <p> Concept design and development of a Restaurant </p>
+                                <p> Pop up vegan restaurant </p>
 
-<p> Ethical, Healthy, Organic Restaurant </p>
+<p>The Vegan is a 100% vegan pop up restaurant. A pop up is, as its name implies, occurring for a limited time in a defined place. The Vegan pop up is conceived to veganize all the locations we are invited to manage.
+</p>
 				<div class="page-title__divider"></div>
 						</div><!-- End / page-title -->
 						
