--- a/verygreen.html
+++ b/verygreen.html
@@ -68,9 +68,9 @@
 						<div class="page-title pb-40">
 							<h2 class="page-title__title"> very green. </h2>
 							<p class="page-title__text">
-                                <p> Concept design and development of a Restaurant </p>
+                                <p> Concept design and development of an Ethical, Healthy, Organic Restaurant </p>
 
-<p> Ethical, Healthy, Organic Restaurant </p>
+<p>  </p>
 <li>Concept design for brand development</li>
 <li>Research and analysis of plant based market in specific areas</li>
 <li>Recipe design of vegan healthy recipes including dietary restriction</li>
@@ -96,8 +96,8 @@
 						<!--  -->
 						<div>
 							<div class="work-detail__entry">
-								<p>Website</p><br>
-								<div class="work-img"><img src="assets/img/verygreen.(klaoe2019).png" width= "1000" alt=""></div>
+								<p><a href="https://verygreen.com/" target="_blank">very green.</a></p><br>
+								<div class="work-img"><img src="assets/img/verygreen.(klaoe2019).jpg" width= "1000" alt=""></div>
 							</div>
 							<div class="sharebox__module awe-text-center">
 								<p class="social-text">SHARE THIS WORK</p>
